--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -4,20 +4,44 @@
     <div id="app">
         <template>
             <el-container style="flex-wrap: wrap;">
-                <header style="width: 100%;">
-                    <div class="menu-header">
-                        Flask
+                <header class="menu">
+                    <div class="menu-header ">
+                        <a href="{{ url_for("chrome_plugin.plugin_list") }}">
+                            <span class="menu-brand">
+                                Flask
+                            </span>
+                        </a>
+                        <button class="menu-toggle" onclick="openMenu(this)">
+                            <svg t="1595944223876" height="30" style="vertical-align: text-bottom;" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1593">
+                                <path fill-rule="evenodd" d="M139.17297778 222.02342717a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z m0 248.55134814a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z m0 248.55134816a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z m0 248.55134814a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z" fill="#333303" p-id="1594"></path>
+                            </svg>
+                        </button>
                     </div>
                     <div>
-                        <ul class="menu-container">
-                            <li class="menu-item float-item list-btn" onclick="openMenu(event)">
+                        <ul class="menu-container collapse">
+                            {#<li class="menu-item float-item list-btn" onclick="openMenu(event)">
                                 <svg height="30" style="vertical-align: text-bottom;fill: white;" viewBox="0 0 16 16" version="1.1" width="30" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M1 2.75A.75.75 0 011.75 2h12.5a.75.75 0 110 1.5H1.75A.75.75 0 011 2.75zm0 5A.75.75 0 011.75 7h12.5a.75.75 0 110 1.5H1.75A.75.75 0 011 7.75zM1.75 12a.75.75 0 100 1.5h12.5a.75.75 0 100-1.5H1.75z"></path>
                                 </svg>
-                            </li>
-                            <li class="menu-item">Chrome插件</li>
-                            <li class="menu-item">Chrome插件</li>
-                            <li class="menu-item">Chrome插件</li>
+                                <svg t="1595944223876" height="30" style="vertical-align: text-bottom;" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1593">
+                                    <path fill-rule="evenodd" d="M139.17297778 222.02342717a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z m0 248.55134814a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z m0 248.55134816a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z m0 248.55134814a41.42522469 41.42522469 0 0 1 0-82.85044939h745.65404444a41.42522469 41.42522469 0 0 1 0 82.85044939z" fill="#333303" p-id="1594"></path>
+                                </svg>
+
+                            </li>#}
+
+                            <a href="{{ url_for("article.article_list_view") }}">
+                                <li onclick="openMenu(this)" class="menu-item">
+                                    博客
+                                </li>
+                            </a>
+
+
+                            <a href="{{ url_for("chrome_plugin.plugin_list") }}">
+                                <li onclick="openMenu(this)" class="menu-item">
+                                    Chrome插件
+                                </li>
+                            </a>
+
 
                         </ul>
                     </div>
@@ -55,8 +79,8 @@
                     <el-main>
 
                         <el-row>
-                            <el-col :lg="{span:18,offset:3}" :xl="{span:18,offset:3}" :md="{span:18,offset:3}"
-                                    :sm="{span:20,offset:2}"  :xs="{span:8,offset:2}">
+                            <el-col :lg="{span:18,offset:3}" :xl="{span:18,offset:3}" :md="{span:20,offset:2}"
+                                    :sm="{span:24}">
                                 <div class="grid-content bg-purple-light">
                                     <div class="main-content_container">
                                         <main-content></main-content>
@@ -90,9 +114,10 @@
         })
 
         function openMenu(e) {
-            let menu = document.querySelector(".menu-container");
-            let length = menu.childElementCount - 1
-            menu.style.height = 3 * length + "em"
+            let menu = document.querySelector(".menu-container.collapse");
+            let classList = menu.classList;
+            let open = "in"
+            classList.toggle(open)
         }
     </script>
     <style>
@@ -121,55 +146,111 @@
             height: 100%;
         }
 
+        .menu {
+            width: 100%;
+            background-color: #f8f8f8;
+            color: #777;
+        }
+
+        .menu a {
+            color: #777;
+        }
+
+
         .menu-container {
             padding-left: 0px;
             list-style: none;
-            height: 3rem;
             position: relative;
             margin: 0px;
+
         }
 
         .menu-header {
             line-height: 100%;
             height: 100%;
+            font-size: 2rem;
+            display: inline;
+            cursor: pointer;
         }
+
+        .menu-brand {
+            height: 50px;
+            line-height: 20px;
+            padding: 15px 15px;
+            float: left;
+        }
+
+        .collapse {
+        {#display: none;#} overflow: hidden;
+            max-height: 0px;
+            transition: max-height .35s linear;
+        }
+
+        .collapse.in {
+            max-height: 100px;
+        }
+
+        .menu-header:after {
+            content: '';
+            clear: both;
+            display: block;
+        }
+
 
         .menu-item {
-            padding: 0 5px;
+            padding: 0 20px;
             cursor: pointer;
             margin: 0;
-            height: 3rem;
-            line-height: 3rem;
-            border: 1px solid red;
-            font-size: 1.2rem;
-            display: inline-block;
+            height: 50px;
+            font-size: 1.3rem;
+            line-height: 50px;
         }
 
-        .list-btn {
-            display: none;
+
+        .menu-item:hover {
+            background-color: burlywood;
+        }
+
+        .menu-toggle {
+            position: relative;
+            float: right;
+        {#padding: 9px 10px;#} margin-top: 8px;
+            margin-right: 15px;
+            outline: none;
+            margin-bottom: 8px;
+            background-color: transparent;
+            background-image: none;
+            border: 1px solid transparent;
+            border-radius: 4px;
+        }
+
+        .menu-toggle:active {
+            border: none;
         }
 
 
         @media screen and (min-width: 768px) {
-            .menu-container {
+            .menu-container.collapse {
+                display: block;
+                max-height: 300px;
+            }
 
+
+            .menu-toggle {
+                display: none;
             }
 
             .menu-header {
+                font-size: 1rem;
                 float: left;
             }
 
             .menu-item {
+                padding: 0 5px;
                 float: left;
+                font-size: 1rem;
             }
 
-            .float-item {
-                float: right;
-            }
-
-            .list-btn {
-                display: inline-block;
-            }
         }
     </style>
 {% endblock %}
