--- a/app/templates/base/foundation.html
+++ b/app/templates/base/foundation.html
@@ -34,11 +34,12 @@
 
     <!-- element ui -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.13.2/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.13.2/lib/theme-chalk/display.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/element-ui@2.12.0/lib/index.min.js"></script>
     <!-- element ui -->
 
     <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1784687_wsqy42iakze.css" />
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1784687_wsqy42iakze.css"/>
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill@7.10.4/dist/polyfill.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.19.2/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsonpickle@1.1.2/build/jsonpickle.min.js"></script>
