--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -80,7 +80,7 @@
 
                 <el-container>
                     <el-main>
-                        <div class="main-content_wrapper">
+                        <el-scrollbar>
                             <el-row>
                                 <el-col :lg="{span:18,offset:3}" :xl="{span:18,offset:3}" :md="{span:20,offset:2}"
                                         :sm="{span:24}">
@@ -91,7 +91,8 @@
                                     </div>
                                 </el-col>
                             </el-row>
-                        </div>
+                        </el-scrollbar>
+
                     </el-main>
                 </el-container>
             </el-container>
@@ -139,14 +140,18 @@
             padding: 3px 0;
         }
 
+
         #app .el-scrollbar__wrap {
             overflow-x: hidden;
         }
 
-        #app .main-content_wrapper{
-            height: 100vh;
-            overflow-y: scroll;
+        @media screen and (min-width: 768px) {
+            #app .el-scrollbar {
+                height: 90vh;
+            }
+
         }
+
 
         #app .main-content_container {
             margin: auto;
