--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base/index.html" %}
 
 {% block title %}Blog_mini -服务器内部问题{% endblock %}
 
 {% block content %}
-<div class="page-header">
-    <h1>不好意思哦，我出现了点小问题哦！</h1>
-</div>
+    <div class="page-header">
+        <h1>不好意思哦，我出现了点小问题哦！</h1>
+    </div>
 {% endblock %}
