--- a/app/templates/base/login.html
+++ b/app/templates/base/login.html
@@ -56,22 +56,18 @@
                         this.$message.warning(e.message)
                     })
                 }
-            },
-            destroy() {
-                console.log("--------")
             }
         })
     </script>
     <style>
         .login-container {
-
             height: calc(100vh);
             line-height: calc(100vh);
         }
 
         .input-group {
             text-align: center;
-            width: calc(100vw);
+            width: calc(95vw);
             line-height: 10px;
             position: relative;
             top: 25%;
@@ -88,8 +84,14 @@
             margin: 0px auto;
             text-align: left;
             line-height: 60px;
-            width: 400px;
+            width: 300px;
             height: 60px;
+        }
+
+        @media screen and (min-width: 768px){
+            .input-group-field{
+                width:400px;
+            }
         }
 
         .input-group-field-label {
