--- a/app/templates/new/blog_details.html
+++ b/app/templates/new/blog_details.html
@@ -499,7 +499,7 @@
       </section>
       <!-- Blog Area End -->
    </main>
-   <footer>
+   {#<footer>
       <div class="footer-wrappr">
           <div class="footer-top">
               <!-- Want To work -->
@@ -590,7 +590,7 @@
               </div>
           </div>
       </div>
-  </footer>
+  </footer>#}
   <!-- Scroll Up -->
   <div id="back-top" >
       <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
